# template-bot

./: .gitignore  .pre-commit-config.yaml  main.py  mise.toml  prek.toml  pyproject.toml  requirements.txt  settings.toml  zensical.toml
.agents/skills/prek/: SKILL.md
.github/: renovate.json
.github/workflows/: autofix.yaml  ci.yaml  docs.yml  prek.yaml
bot/: __init__.py  log.py  settings.py
docs/: index.md  markdown.md
