[project]
name = "template-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "hikari-lightbulb>=3.2.3",
    "hikari[speedups]>=2.5.0",
    "rich>=14.3.3",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ruff]
fix = true
line-length = 120
target-version = "py313"
extend-exclude = [".cache", ".venv"]
output-format = "concise"
unsafe-fixes = true

[tool.ruff.lint]
select = [
  "E","F","W",
  "B","C4","SIM",
  "I","TID",
  "ANN","UP",
  "S","DTZ","TRY","ERA",
  "RET","RSE","Q","PGH","T20",
  "RUF",
  "N","A",
  "ASYNC",
  "D102","D103","D400","D401"
]
ignore = [
  # Type hints
  "ANN002","ANN003","ANN204","ANN206",
  # Security
  "S311",  # allow random for fun commands
  # Pylint-inspired
  "PLR2004","PLR0913"
]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["bot"]
lines-after-imports = 2
