[project]
name = "template-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "hikari-lightbulb>=3.2.4",
  "hikari[speedups]>=2.5.0",
  "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
  "commitizen>=4.16.4",
  "prek>=0.4.5",
  "ruff>=0.15.19",
  "rumdl>=0.2.22",
  "tombi>=1.1.5",
  "ty>=0.0.53",
]

[tool.ruff]
cache-dir = ".cache/ruff"
fix = true
line-length = 120
extend-exclude = [".cache", ".venv"]
output-format = "concise"
unsafe-fixes = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "B",
  "C4",
  "SIM",
  "I",
  "TID",
  "ANN",
  "UP",
  "S",
  "DTZ",
  "TRY",
  "ERA",
  "RET",
  "RSE",
  "Q",
  "PGH",
  "T20",
  "RUF",
  "N",
  "A",
  "ASYNC",
  "D102",
  "D103",
  "D400",
  "D401"
]
ignore = [
  # Type hints
  "ANN002",
  "ANN003",
  "ANN204",
  "ANN206",
  # Security
  "S311",  # allow random for fun commands
  # Pylint-inspired
  "PLR2004",
  "PLR0913"
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["bot"]
lines-after-imports = 2

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.rumdl]
cache-dir = ".cache/rumdl"
line-length = 200
respect-gitignore = true
