[project]
name = "template-bot"
version = "0.1.0"
description = "A template bot for Discord written in Python"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Keksi", email = "hello@keksi.dev" },
]
dependencies = [
  "hikari-lightbulb>=3.2.5",
  "hikari[speedups]>=2.5.0",
  "pydantic-settings>=2.14.2",
  "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
  "commitizen>=4.16.4",
  "prek>=0.4.8",
  "ruff>=0.15.20",
  "rumdl>=0.2.28",
  "tombi>=1.2.0",
  "ty>=0.0.56",
  "zensical>=0.0.47",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
cache-dir = ".cache/ruff"
fix = true
line-length = 120
extend-exclude = [".cache", ".venv"]
output-format = "concise"
unsafe-fixes = true

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "D",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FURB",
  "G",
  "I",
  "LOG",
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W"
]
ignore = [
  # Type hints
  "ANN002",
  "ANN003",
  "ANN204",
  "ANN206",
  # Docstring
  "D100",
  "D104",
  "D203",
  "D212",
  # Pylint-inspired
  "PLR0913",
  "PLR2004",
  # Security
  "S311"  # allow random for fun commands
]

[tool.ruff.lint.isort]
known-first-party = ["bot"]
lines-after-imports = 2

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.rumdl]
cache-dir = ".cache/rumdl"
line-length = 200
respect-gitignore = true

[tool.rumdl.per-file-flavor]
"docs/**/*.md" = "mkdocs"

[tool.tombi.files]
exclude = ["uv.lock"]
